# marine

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
marine/: __init__.py  logger.py  predict.py
marine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
marine/criterions/: __init__.py  crossentopyloss.py  log_likelihood.py
marine/data/: dataset.py  pad.py  util.py
marine/data/feature/: feature_set.py  feature_table.py
marine/dict/accent_phrase_boundary/: artifact.tsv
marine/dict/accent_status/: artifact.tsv
marine/models/: __init__.py  att_lstm_decoder.py  base_model.py  bilstm_encoder.py  crf_decoder.py  embedding.py  linear_decoder.py  util.py
marine/modules/: attention.py  crf_tagger.py
marine/utils/: metrics.py  openjtalk_util.py  post_process.py  pretrained.py  regex.py  util.py
marine/utils/g2p_util/: __init__.py  accent.py  boundary.py  g2p.py  util.py
recipe/20220908_release/: run.sh
recipe/20220908_release/conf/train/: config.yaml
recipe/20220908_release/conf/train/criterions/: loglikehood.yaml
recipe/20220908_release/conf/train/model/: mtl_lstm_encoder_crf_decoder.yaml
recipe/20220912_release/: run.sh
recipe/20220912_release/conf/train/data/: mora_based_seq.yaml
recipe/common/: build_vocab.sh  jsut2corpus.sh  pack_corpus.sh  train.sh
recipe/common/database/20220912_jsut_vocab_min_2/: vocab.pkl
tests/: test_g2p_util.py  test_jsut_corpus.py  test_metrics.py  test_modules.py  test_predictor.py  test_util.py
tests/samples/: test_log_sample.json
(+4 files in other folders)
